= Changelog

== 0.6.0 - unreleased

== 0.5.0 - 2021-07-26

:224: https://github.com/stackabletech/agent/pull/224[#224]
:229: https://github.com/stackabletech/agent/pull/229[#229]
:234: https://github.com/stackabletech/agent/pull/234[#234]
:235: https://github.com/stackabletech/agent/pull/235[#235]

=== Added
* `hostIP` and `podIP` added to the pod status ({224}).
* Environment variable `KUBECONFIG` set in systemd services ({234}).

=== Fixed
* Invalid or unreachable repositories are skipped when searching for
  packages ({229}).
* Access rights of the private key file restricted to the owner ({235}).
  The permissions are set when the file is created. On existing
  installations the permissions must be set manually, e.g. with
  `chmod 600 /etc/stackable/stackable-agent/secret/agent.key`.

== 0.4.0 - 2021-06-23

:188: https://github.com/stackabletech/agent/pull/188[#188]
:205: https://github.com/stackabletech/agent/pull/205[#205]

=== Added
* Annotation `featureLogs` added to the pods to indicate if logs can be
  retrieved with `kubectl logs` ({188}).

=== Changed
* Restart setting in systemd units removed because the agent already
  monitors the units and restarts them according to the restart policy
  in the pod spec ({205}).

=== Fixed
* Pods with restart policy `Never` handled correctly ({205}).

== 0.3.0 - 2021-05-27

:165: https://github.com/stackabletech/agent/pull/165[#165]
:169: https://github.com/stackabletech/agent/pull/169[#169]
:173: https://github.com/stackabletech/agent/pull/176[#173]
:176: https://github.com/stackabletech/agent/pull/176[#176]

=== Added
* Artifacts for merge requests are created ({169}, {173}).

=== Changed
* Structure of the documentation changed so that it can be incorporated
  into the overall Stackable documentation ({165}).

=== Fixed
* Deadlock fixed which occurred when multiple pods were started or
  stopped simultaneously ({176}).

== 0.2.0 - 2021-05-20

:159: https://github.com/stackabletech/agent/pull/159[#159]