@@ -2,6 +2,12 @@
 
 == 0.6.0 - unreleased
 
+:262: https://github.com/stackabletech/agent/pull/262[#262]
+
+=== Changed
+* Lazy validation of repository URLs changed to eager validation
+  ({262}).
+
 == 0.5.0 - 2021-07-26
 
 :224: https://github.com/stackabletech/agent/pull/224[#224]
